logs/batchjob_2.2774.out
Running on host grad07

Initial Time is Sun 19 Jun 2022 07:19:14 PM -03

Directory is /home/pp12704/t2

This jobs runs on the following nodes:
grad[07-08]

JOB_ID:
2774

Running on folder: 7
with 16 threads
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 500 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 1000 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 1500 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 2000 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 2500 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 3000 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 3500 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 4000 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 4500 - num_threads: 16
mandelbrot.c: In function ‘main’:
mandelbrot.c:66:10: error: expected iteration declaration or initialization before ‘;’ token
   66 |     for (;init < end; init++) {
      |          ^
running: 5000 - num_threads: 16
